# hanzels-todo

./: .gitignore  README.md  pyproject.toml
src/todo/: __init__.py  models.py  repositories.py  routes.py
src/todo/sql/: init.sql
src/todo/static/: index.js
src/todo/templates/: index.html
